Fixed top being cut off in Chromium-based browsers

--- a/wwwroot/changestyles.css
+++ b/wwwroot/changestyles.css
@@ -4,6 +4,9 @@
 .sidenav ul{
   background-color: #262626;
 }
+.main{
+        justify-content: safe center;
+}
 h2{
   color: #fff;
 }
